<resources>
    <string name="bt_dash_get">Get quotations</string>
    <string name="bt_dash_favourite">Favourite quotations</string>
    <string name="bt_dash_settings">Settings</string>
    <string name="bt_dash_about">About</string>
    <string name="name_activity_quotation" translatable="false">Quotation shake</string>
    <string name="name_activity_random">Random quotations</string>
    <string name="name_activity_favourite">Favourite quotations</string>
    <string name="name_activity_settings">Settings</string>
    <string name="name_activity_about">About</string>
    <string name="about_info" translatable="false">Quotation Shake by\n\nFernando Fiocca\n\nferfiopa@inf.upv.es\n\n2020</string>
    <string name="favourite_bt_info">Author info</string>
    <string name="quotation_hello">Hello %1s!\nPress Refresh to get a new quotation</string>
    <string name="quotation_sample_quotation">Sample quote %1$d</string>
    <string name="quotation_sample_author">Sample author %1$d</string>
    <string name="quotation_random_user">Nameless One</string>
    <string name="quotation_error">Error when request the quote to web service</string>
    <string name="favourite_cant_get_info">Can not find information about this author</string>
    <string name="favourite_take_a_breath">Take a breath!</string>
    <string name="favourite_are_you_sure">Are you sure that you want to delete this quotation?</string>
    <string name="quotation_menu_add">Add</string>
    <string name="quotation_menu_refresh">Refresh</string>
    <string name="favourite_menu_delete">Clear All</string>
    <string name="favourite_menu_are_you_sure">Are you sure that you want to delete ALL your favourte quotations?</string>
    <string name="settings_user_name">User Name</string>
    <string name="settings_user_summary">Name that identifies user</string>
    <string name="settings_web_service">Web services</string>
    <string name="settings_quotation_language">Quotation language</string>
    <string name="settings_quotation_language_summary">Quotation will be received in the selected language</string>
    <string name="settings_http_request">HTTP request method</string>
    <string name="settings_http_request_summary">Web request will be performed using the selected HTTP method</string>
    <string name="settings_database">Database</string>
    <string name="settings_database_access">Data access method</string>
    <string name="settings_database_summary">Database will be accessed following the selected method</string>
    <string name="settings_room" translatable="false">Room</string>
    <string name="settings_sqlite" translatable="false">SQLiteOpenHelper</string>
    <string name="settings_english">English</string>
    <string name="settings_russian">Russian</string>
    <string name="settings_get" translatable="false">GET</string>
    <string name="settings_post" translatable="false">POST</string>
    <string name="settings_user_hint">Enter your user name</string>
</resources>