<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue=""
        android:summary="@string/settings_user_summary"
        android:hint="@string/settings_user_hint"
        android:key="username"
        android:title="@string/settings_user_name" />
    <PreferenceCategory
        android:title="@string/settings_web_service">
        <ListPreference
            android:key="language"
            android:title="@string/settings_quotation_language"
            android:summary="@string/settings_quotation_language_summary"
            android:entries="@array/string_language_options"
            android:entryValues="@array/int_language_options" />
        <ListPreference />
        <ListPreference
            android:key="http"
            android:title="@string/settings_http_request"
            android:summary="@string/settings_http_request_summary"
            android:entries="@array/string_request_options"
            android:entryValues="@array/int_request_options" />
        <ListPreference />
    </PreferenceCategory>

</PreferenceScreen>