<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/btGet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button"
        android:onClick="dashUnifiedCallback"
        android:text="@string/bt_dash_get"
        android:textColor="@color/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btFavourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btFavourite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button"
        android:onClick="dashUnifiedCallback"
        android:text="@string/bt_dash_favourite"
        android:textColor="@color/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btGet" />

    <Button
        android:id="@+id/btSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/custom_button"
        android:onClick="dashUnifiedCallback"
        android:text="@string/bt_dash_settings"
        android:textColor="@color/custom_button"
        app:layout_constraintBottom_toTopOf="@+id/btAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btFavourite" />

    <Button
        android:id="@+id/btAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button"
        android:onClick="dashUnifiedCallback"
        android:text="@string/bt_dash_about"
        android:textColor="@color/custom_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSettings" />
</androidx.constraintlayout.widget.ConstraintLayout>